tests/codegen/fail/object/attr_wrong_item.rs
use juniper::graphql_object;

#[graphql_object]
enum Character {}

fn main() {}
